test/fail/integration/_fail_grammar_lactarg_1.hs
x :: Int -> Int -> Int
x y z = y + z
y :: Int
y = x t 3
main = print "hello"